Update static content from Scanarium repos

--- a/functions/translate/localizations/de.json
+++ b/functions/translate/localizations/de.json
@@ -19,6 +19,7 @@
     "All scenes got reset": "Alle Szenen wurden zurückgesetzt",
     "All {scene_name} coloring pages": "Alle {scene_name} Ausmalbilder",
     "Applying the changes requires to automatically reload the page": "Um die Änderungen anwenden zu können, ist ein automatisches Neu-laden der Seite notwendig.",
+    "Attachment": "Anhang",
     "Automatic page reload required to finish resetting the scene.": "Zum Abschließen des Zurücksetzens der Szene ist ein automatisches Neu-laden der Seite notwendig.",
     "Calling script \"{script_name}\" as cgi is forbidden": "Skript \"{script_name}\" darf nicht als cgi gestartet werden",
     "Cannot switch to scene {scene_name}": "Kann nicht zur Szene \"{scene_name}\" wechseln",
@@ -27,6 +28,7 @@
     "Command \"{command}\" does not allow a parameter \"{parameter}\"": "Kommando \"{command}\" erlaubt keinen Parameter \"{parameter}\"",
     "Confirm new password": "Neues Passwort bestätigen",
     "Current password": "Aktuelles Passwort",
+    "Dear Scanarium Team,\\n\\nThe attached picture failed to scan, but I cannot see why. Could you please have a look?\\n\\nThanks and best regards": "Liebes Scanarium Team,\\n\\nDas mitgeschickte Bild lässt sich nicht scannen. Aber warum nicht?\\n\\nBesten Dank und liebe Grüße",
     "Delete actors": "Figuren löschen",
     "Delete all your scanned actors": "Alle gespeicherten Zeichnungen löschen",
     "Directory to store file in does not exist, or is no directory": "Verzeichnis zum Speichern existiert nicht, oder ist kein Verzeichnis",
@@ -47,9 +49,14 @@
     "Failed to parse file. Only JPG files are supported.": "Einlesen der Datei schlug fehl. Es werden nur JPG Dateien werden unterstützt.",
     "Failed to scan new actor drawing for {actor_name}": "Einscannen von Zeichnung \"{actor_name}\" schlug fehl",
     "Failed to scan new actor drawing for {actor_name} for scene {scene_name}": "Einscannen von Zeichnung \"{actor_name}\" für Szene \"{scene_name}\" schlug fehl",
+    "Feedback / Comments / Issue Reports": "Feedback / Kommentare / Probleme",
     "Forbidden characters in cgi name": "cgi Name enthält verbotene Zeichen",
     "Forwarding to {url-description}.": "Weiterleitung zu {url-description}.",
     "Help Page": "Hilfe-Seite",
+    "If you run into issues, or your pictures fail to scan please let us know through email to {email}": "Wenn etwas nicht funktioniert oder das Scannen deiner Bilder nicht klappt, schick uns bitte eine Email an {email}",
+    "If you run into issues, or your pictures fail to scan please let us know through email to {email} or use this form:": "Wenn etwas nicht funktioniert oder das Scannen deiner Bilder nicht klappt, schick uns bitte eine Email an {email} oder melde es über dieses Formular:",
+    "If you run into issues, or your pictures fail to scan please report them using this form:": "Wenn etwas nicht funktioniert oder das Scannen deiner Bilder nicht klappt, melde es bitte über dieses Formular:",
+    "Include last failed upload": "Letztes fehlgeschlagenes Bild mitschicken",
     "Intentional error from the \"debug:fail\" command": "Absichtlicher Fehler vom Kommando \"debug:fail\"",
     "Invalid value": "Ungültiger Wert",
     "Is not a directory \"{file_name}\"": "\"{file_name}\" ist kein Verzeichnis",
@@ -57,16 +64,18 @@
     "Loading actor data ...": "Lade Figuren Daten ...",
     "Loading localization data ...": "Lade Übersetzungs-Daten ...",
     "Loading scene data ...": "Lade Szenen Daten ...",
+    "Message": "Nachricht",
     "Missing configuration entry at \"{key}\" in \"{section}\"": "Konfiguration von \"{key}\" in \"{section}\" fehlt",
     "More about Scanarium": "Mehr zu Scanarium",
     "New password": "Neues Passwort",
     "New password and its confirmation do not match": "Das neue Passwort und die Bestätigung unterscheiden sich",
+    "No content provided for feedback. Either provide a message, or attach the last failed image.": "Feedback ist leer. Gib entweder eine Nachricht ein oder schicke das letzte fehlgeschlagene Bild mit.",
     "No image selected. Upload aborted.": "Kein Bild ausgewählt. Hochladen abgebrochen",
     "Password is not correct": "Das Passwort ist falsch",
     "Password is too short (minimum: {count} characters)": "Passwort ist zu kurz (mindestens {count} Zeichen)",
     "Pause/Resume": "Pause",
     "Paused": "Pause",
-    "Really reset the scene \"{scene_name}\", delete this scenes' scanned actors, and start afresh? (This cannot be undone)": "Die Szene \"{scene_name}\" wirklich zurücksetzen, eingescannte Figuren löschen und neu starten? (Die kann nicht rückgängig gemacht werden)",
+    "Really reset the scene \"{scene_name}\", delete this scenes' scanned actors, and start afresh? (This cannot be undone)": "Die Szene \"{scene_name}\" wirklich zurücksetzen, eingescannte Figuren löschen und neu starten? (Dies kann nicht rückgängig gemacht werden)",
     "Reindex actors": "Gespeicherte Zeichnungen neu indexieren",
     "Reset scene \"{scene_name}\"": "Szene \"{scene_name}\" zurücksetzen",
     "Resetting all scenes failed": "Zurücksetzen der Szenen schlug fehl",
@@ -79,6 +88,7 @@
     "Scan this page to show/hide the frames-per-second counter": "Lege diese Seite ein um die Bildfrequenz-Anzeige umzuschalten",
     "Scan this page to shut Scanarium down savely": "Lege diese Seite ein um Scanarium auszuschalten",
     "Scan this page to switch to scene": "Lege diese Seite ein um zur Szene {parameter_name} zu wechseln",
+    "Scanarium feedback for {hostname}": "Scanarium Rückmeldung für {hostname}",
     "Scanned new actor drawing for {actor_name}": "Neue \"{actor_name}\" Zeichnung gescannt",
     "Scanned new actor drawing for {actor_name} for scene {scene_name}": "Neue \"{actor_name}\" Zeichnung aus der Szene \"{scene_name}\" gescannt",
     "Scene \"{scene_name}\" does not exist": "Szene \"{scene_name}\" existiert nicht",
@@ -90,6 +100,7 @@
     "Show/hide this help page": "Diese Hilfe-Seite ein-/ausblenden",
     "Shutdown initiated": "Scanarium wird herunterfahren",
     "Shutdown initiation failed": "Herunterfahren schlug fehl",
+    "Submit": "Abschicken",
     "Switch scene": "Szenenwechsel",
     "Switching to scene {scene_name}": "Wechsle zur Szene \"{scene_name}\"",
     "Taken too many extraction tries from scanned image": "Zu viele Versuche gebraucht um Daten aus Bild zu extrahieren",
@@ -119,6 +130,7 @@
   },
   "parameters": {
     "actor_name": {
+      "Ambulance": "Rettungsauto",
       "Astronaut": "Astronaut",
       "BunnyBalloon": "Hasen-Luftballon",
       "Bus": "Autobus",
@@ -128,10 +140,25 @@
       "FlowerFairy": "Blumenfee",
       "FlyingSaucer": "Fliegende Untertasse",
       "HeartBalloon": "Herz-Luftballon",
+      "InstantPhoto": "Sofortbild",
       "MonsterTruck": "Monster-Truck",
       "OldFamilyCar": "Altes Familienauto",
       "Parrot": "Papagei",
+      "PhotoCastleRuin": "Foto Burgruine",
+      "PhotoChild": "Foto Kind",
+      "PhotoFace": "Foto Gesicht",
+      "PhotoMan": "Foto Mann",
+      "PhotoManAndChild": "Foto Mann und Kind",
+      "PhotoRacingCar": "Foto Rennauto",
+      "PhotoTwoChildren": "Foto zwei Kinder",
+      "PhotoUnicorn": "Foto Einhorn",
+      "PhotoWoman": "Foto Frau",
+      "PhotoWomanAndChild": "Foto Frau und Kind",
       "PlainBalloon": "Einfacher Luftballon",
+      "PlainPhoto10x15cm": "Freies Foto 10x15cm",
+      "Planet": "Planet",
+      "PlanetWithMoon": "Planet mit Mond",
+      "PlanetWithRing": "Planet mit Ring",
       "PoliceCar": "Polizeiauto",
       "QuadBike": "Quad",
       "SimpleButterfly": "Schlichter Schmetterling",
@@ -150,6 +177,7 @@
     "cgi_name": {
       "regenerate-static-content": "Neu-Erzeugung der statischen Inhalte",
       "reindex": "Reindexierung",
+      "report-feedback": "Feedback-Einsendung",
       "reset-dynamic-content": "Zurücksetzen aller dynamischen Inhalte",
       "scan": "Scannen",
       "show-source": "Kamera-Anzeige",
@@ -173,6 +201,11 @@
       "en": "Englisch",
       "eo": "Esperanto"
     },
+    "page_title": {
+      "Administration": "Verwaltung",
+      "General": "Allgemein",
+      "Help": "Hilfe"
+    },
     "parameter_label": {
       "actor": "Figur",
       "parameter": "Parameter"
@@ -190,6 +223,7 @@
       "balloons": "Luftballons",
       "fairies": "Feenwelt",
       "highway": "Landstraße",
+      "photos": "Fotos",
       "space": "Weltall"
     },
     "site": {
