--- a/functions/translate/localizations/en.json
+++ b/functions/translate/localizations/en.json
@@ -8,6 +8,7 @@
   },
   "parameters": {
     "actor_name": {
+      "Ambulance": "Ambulance",
       "Astronaut": "Astronaut",
       "BunnyBalloon": "Bunny Balloon",
       "Bus": "Bus",
@@ -17,9 +18,24 @@
       "FlowerFairy": "Flower Fairy",
       "FlyingSaucer": "Flying Saucer",
       "HeartBalloon": "Heart Balloon",
+      "InstantPhoto": "Instant Photo",
       "MonsterTruck": "Monster Truck",
       "OldFamilyCar": "Old Family Car",
+      "PhotoCastleRuin": "Photo Castle Ruin",
+      "PhotoChild": "Photo Child",
+      "PhotoFace": "Photo Face",
+      "PhotoMan": "Photo Man",
+      "PhotoManAndChild": "Photo Man and Child",
+      "PhotoRacingCar": "Photo Racing Car",
+      "PhotoTwoChildren": "Photo two Children",
+      "PhotoUnicorn": "Photo Unicorn",
+      "PhotoWoman": "Photo Woman",
+      "PhotoWomanAndChild": "Photo Woman and Child",
       "PlainBalloon": "Plain Balloon",
+      "PlainPhoto10x15cm": "Plain Photo 10x15cm",
+      "Planet": "Planet",
+      "PlanetWithMoon": "Planet with Moon",
+      "PlanetWithRing": "Planet with Ring",
       "PoliceCar": "Police Car",
       "QuadBike": "Quad Bike",
       "SimpleButterfly": "Simple Butterfly",
@@ -76,6 +92,7 @@
       "balloons": "Balloons",
       "fairies": "Fairies",
       "highway": "Highway",
+      "photos": "Photos",
       "space": "Space"
     }
   }
