--- a/functions/translate/localizations/de.json
+++ b/functions/translate/localizations/de.json
@@ -12,15 +12,21 @@
     "(This is useful to get rid of unwanted images)": "(Das ist nützlich um unerwünschte Bilder wieder zu entfernen)",
     "---Action---": "---Aktion---",
     "---Description---": "---Beschreibung---",
+    "... brings your coloring pages to life!": "... erweckt eure Ausmalbilder zum Leben!",
     "A reload is necessary.": "Ein Neu-laden der Seite ist notwendig.",
     "Actor \"{actor_name}\" does not exist in scene \"{scene_name}\"": "In der Szene \"{scene_name}\" gibt es keinen Figur \"{actor_name}\"",
     "Add another random actor": "Zufällige Figur zu Szene hinzufügen",
+    "Added new {actor_name}": "{actor_name} hinzugefügt",
+    "Added new {actor_name} for scene {scene_name}": "{actor_name} für Szene {scene_name} hinzugefügt",
     "All coloring pages": "Alle Ausmalbilder",
     "All scenes got reset": "Alle Szenen wurden zurückgesetzt",
     "All {scene_name} coloring pages": "Alle {scene_name} Ausmalbilder",
     "Applying the changes requires to automatically reload the page": "Um die Änderungen anwenden zu können, ist ein automatisches Neu-laden der Seite notwendig.",
+    "Archive {year}": " Archiv {year}",
     "Attachment": "Anhang",
     "Automatic page reload required to finish resetting the scene.": "Zum Abschließen des Zurücksetzens der Szene ist ein automatisches Neu-laden der Seite notwendig.",
+    "Back to Archive": "Zurück zum Archiv",
+    "Back to Archive {year}": "Zurück zum Archiv {year}",
     "Calling script \"{script_name}\" as cgi is forbidden": "Skript \"{script_name}\" darf nicht als cgi gestartet werden",
     "Cannot switch to scene {scene_name}": "Kann nicht zur Szene \"{scene_name}\" wechseln",
     "Change password": "Passwort ändern",
@@ -38,24 +44,27 @@
     "Empty configuration entry at \"{key}\" in \"{section}\"": "Konfiguration von \"{key}\" in \"{section}\" is leer",
     "Enter/leave fullscreen mode": "Vollbild-Modus umschalten",
     "Exception marked as skipped": "Ausnahme ist übersprungen markiert",
+    "Expected to find one QR code in image, but found {qr_codes_count}": "Fand {qr_codes_count} statt nur einem QR-Code im Bild",
+    "Failed to find QR code in image": "Konnte keinen QR-Code im Bild finden",
+    "Failed to find big black rectangle in image": "Konnte keinen großes schwarzes Rechteck im Bild finden",
     "Failed to find mask {file_name}": "Konnte Masken-Datei \"{file_name}\" nicht finden",
-    "Failed to find rectangle contour": "Konnte keinen Rechteck-Umriss im Bild finden",
-    "Failed to find scanned QR code": "Konnte keinen QR-Code im Bild finden",
     "Failed to find source file {source_file} for generating mask {target_file}": "Konnte Quelle {source_file} zur Erzeugung der Maske {target_file} nicht finden",
     "Failed to identify sheet on scanned image": "Konnte Zettel auf gescanntem Bild nicht finden",
     "Failed to load parameters for undistortion from \"{file_name}\"": "Konnte Entzerr-Parameter nicht von \"{file_name}\" laden",
     "Failed to open camera \"{source}\"": "Konnte Kamera \"{source}\" nicht öffnen",
     "Failed to parse \"{stripped}\" of source \"{source}\" to number": "Konnte \"{stripped}\" von \"{source}\" nicht als Zahl lesen",
-    "Failed to parse file. Only JPG files are supported.": "Einlesen der Datei schlug fehl. Es werden nur JPG Dateien werden unterstützt.",
     "Failed to scan new actor drawing for {actor_name}": "Einscannen von Zeichnung \"{actor_name}\" schlug fehl",
     "Failed to scan new actor drawing for {actor_name} for scene {scene_name}": "Einscannen von Zeichnung \"{actor_name}\" für Szene \"{scene_name}\" schlug fehl",
     "Feedback / Comments / Issue Reports": "Feedback / Kommentare / Probleme",
+    "Feedback, comments, issue reports, ...": "Feedback, Kommentare, Probleme, ...",
     "Forbidden characters in cgi name": "cgi Name enthält verbotene Zeichen",
     "Forwarding to {url-description}.": "Weiterleitung zu {url-description}.",
+    "From": "Von",
     "Help Page": "Hilfe-Seite",
     "If you run into issues, or your pictures fail to scan please let us know through email to {email}": "Wenn etwas nicht funktioniert oder das Scannen deiner Bilder nicht klappt, schick uns bitte eine Email an {email}",
     "If you run into issues, or your pictures fail to scan please let us know through email to {email} or use this form:": "Wenn etwas nicht funktioniert oder das Scannen deiner Bilder nicht klappt, schick uns bitte eine Email an {email} oder melde es über dieses Formular:",
     "If you run into issues, or your pictures fail to scan please report them using this form:": "Wenn etwas nicht funktioniert oder das Scannen deiner Bilder nicht klappt, melde es bitte über dieses Formular:",
+    "Image is too small. Minimum width is {min_width} pixels": "Bild ist zu klein. Mindestbreite ist {min_width} Pixel",
     "Include last failed upload": "Letztes fehlgeschlagenes Bild mitschicken",
     "Intentional error from the \"debug:fail\" command": "Absichtlicher Fehler vom Kommando \"debug:fail\"",
     "Invalid value": "Ungültiger Wert",
@@ -69,12 +78,16 @@
     "More about Scanarium": "Mehr zu Scanarium",
     "New password": "Neues Passwort",
     "New password and its confirmation do not match": "Das neue Passwort und die Bestätigung unterscheiden sich",
+    "Newest Entries": "Neueste Einträge",
+    "News around Scanarium": "Aktuelles zu Scanarium",
     "No content provided for feedback. Either provide a message, or attach the last failed image.": "Feedback ist leer. Gib entweder eine Nachricht ein oder schicke das letzte fehlgeschlagene Bild mit.",
     "No image selected. Upload aborted.": "Kein Bild ausgewählt. Hochladen abgebrochen",
+    "Only {supported_formats} files are supported.": "Nur {supported_formats} Dateien werden unterstützt.",
     "Password is not correct": "Das Passwort ist falsch",
     "Password is too short (minimum: {count} characters)": "Passwort ist zu kurz (mindestens {count} Zeichen)",
     "Pause/Resume": "Pause",
     "Paused": "Pause",
+    "QR code contains misformed data": "QR-Code enthält ungültige Daten",
     "Really reset the scene \"{scene_name}\", delete this scenes' scanned actors, and start afresh? (This cannot be undone)": "Die Szene \"{scene_name}\" wirklich zurücksetzen, eingescannte Figuren löschen und neu starten? (Dies kann nicht rückgängig gemacht werden)",
     "Reindex actors": "Gespeicherte Zeichnungen neu indexieren",
     "Reset scene \"{scene_name}\"": "Szene \"{scene_name}\" zurücksetzen",
@@ -89,10 +102,11 @@
     "Scan this page to shut Scanarium down savely": "Lege diese Seite ein um Scanarium auszuschalten",
     "Scan this page to switch to scene": "Lege diese Seite ein um zur Szene {parameter_name} zu wechseln",
     "Scanarium feedback for {hostname}": "Scanarium Rückmeldung für {hostname}",
-    "Scanned new actor drawing for {actor_name}": "Neue \"{actor_name}\" Zeichnung gescannt",
-    "Scanned new actor drawing for {actor_name} for scene {scene_name}": "Neue \"{actor_name}\" Zeichnung aus der Szene \"{scene_name}\" gescannt",
+    "Scanarium-Team": "Scanarium-Team",
     "Scene \"{scene_name}\" does not exist": "Szene \"{scene_name}\" existiert nicht",
     "Scene \"{scene_name}\" got reset": "Szene \"{scene_name}\" wurde zurückgesetzt",
+    "Server-side image processing failed": "Bildverarbeitung am Server schlug fehl",
+    "Server-side image processing took too long": "Bildverarbeitung am Server dauerte zu lange",
     "Settings": "Einstellungen",
     "Show camera source image": "Zeige Kamerabild",
     "Show/hide developer information": "Entwicklerinformationen ein-/ausblenden",
@@ -109,6 +123,7 @@
     "The command \"{command}\" did not finish within {timeout} seconds": "Das Kommando \"{command}\" wurde nicht innerhalb von {timeout} Sekunden fertig",
     "The command \"{command}\" did not return 0": "Rückgabewert von \"{command}\" war nicht 0",
     "This field may not be empty": "Dieses Feld darf nicht leer sein",
+    "To": "An",
     "Toggled frames-per-second counter": "Bildfrequenz-Anzeige umgeschaltet",
     "Unknown camera type \"{camera_type}\"": "Unbekannter Kameratyp \"{camera_type}\"",
     "Unknown frontend command \"{command}\"": "Unbekanntes Kommando \"{command}\"",
@@ -118,13 +133,17 @@
     "Upload of \"{image_name}\" started": "Hochladen von \"{image_name}\" gestartet",
     "User interface": "Benutzeroberfläche",
     "Welcome to Scanarium!": "Willkommen bei Scanarium!",
+    "Yearly Archives": "Archiv für einzelne Jahre",
     "fps: {fps}": "Bilder/s: {fps}",
+    "more": "mehr",
     "undefined error": "Unbekannter Fehler",
+    "your.address@example.org": "deine.adresse@beispiel.org",
     "{PoliceCar-Decal}": "P O L I Z E I",
-    "{cgi_name} failed": "{cgi_name} schlug fehl",
-    "{cgi_name} ok": "{cgi_name} ok",
     "{command_name} command failed": "Kommando {command_name} schlug fehl",
     "{command_name} command ok": "Kommando {command_name} ok",
+    "{method_name} failed": "Fehler beim {method_name}",
+    "{method_name} ok": "{method_name} ok",
+    "{month} {day}, {year}": "{day}. {month} {year}",
     "{parameter_name} ({parameter_variant_name})": "{parameter_name} mit {parameter_variant_name}",
     "↓↓↓ Insert coloring pages below ↓↓↓": "↓↓↓ Ausgemalte Bilder hier unten ins Fach einlegen ↓↓↓"
   },
@@ -174,15 +193,6 @@
       "WoodFairy": "Waldfee",
       "ZaggedButterfly": "Gezackter Schmetterling"
     },
-    "cgi_name": {
-      "regenerate-static-content": "Neu-Erzeugung der statischen Inhalte",
-      "reindex": "Reindexierung",
-      "report-feedback": "Feedback-Einsendung",
-      "reset-dynamic-content": "Zurücksetzen aller dynamischen Inhalte",
-      "scan": "Scannen",
-      "show-source": "Kamera-Anzeige",
-      "update-password": "Änderung des Passworts"
-    },
     "command_label": {
       "command": "Kommando",
       "scene": "Szene"
@@ -200,6 +210,30 @@
       "de": "Deutsch",
       "en": "Englisch",
       "eo": "Esperanto"
+    },
+    "method_name": {
+      "regenerate-static-content": "Neu-Erzeugung der statischen Inhalte",
+      "reindex": "Reindexierung",
+      "report-feedback": "Feedback-Einsendung",
+      "reset-dynamic-content": "Zurücksetzen aller dynamischen Inhalte",
+      "scan": "Einlesen",
+      "scan-data": "Hochladen",
+      "show-source": "Kamera-Anzeige",
+      "update-password": "Änderung des Passworts"
+    },
+    "month": {
+      "1": "Jänner",
+      "10": "Oktober",
+      "11": "November",
+      "12": "Dezember",
+      "2": "Februar",
+      "3": "März",
+      "4": "April",
+      "5": "Mai",
+      "6": "Juni",
+      "7": "Juli",
+      "8": "August",
+      "9": "September"
     },
     "page_title": {
       "Administration": "Verwaltung",
