--- a/functions/translate/localizations/de.json
+++ b/functions/translate/localizations/de.json
@@ -62,6 +62,7 @@
     "Forbidden characters in cgi name": "cgi Name enthält verbotene Zeichen",
     "Forwarding to {url-description}.": "Weiterleitung zu {url-description}.",
     "From": "Von",
+    "Go to online help": "Gehe zur Online Hilfe",
     "Help Page": "Hilfe-Seite",
     "If you run into issues, or your pictures fail to scan please let us know through email to {email}": "Wenn etwas nicht funktioniert oder das Scannen deiner Bilder nicht klappt, schick uns bitte eine Email an {email}",
     "If you run into issues, or your pictures fail to scan please let us know through email to {email} or use this form:": "Wenn etwas nicht funktioniert oder das Scannen deiner Bilder nicht klappt, schick uns bitte eine Email an {email} oder melde es über dieses Formular:",
@@ -85,6 +86,7 @@
     "News around Scanarium": "Aktuelles zu Scanarium",
     "No content provided for feedback. Either provide a message, or attach the last failed image.": "Feedback ist leer. Gib entweder eine Nachricht ein oder schicke das letzte fehlgeschlagene Bild mit.",
     "No image selected. Upload aborted.": "Kein Bild ausgewählt. Hochladen abgebrochen",
+    "Online Help": "Online-Hilfe",
     "Only {supported_formats} files are supported.": "Nur {supported_formats} Dateien werden unterstützt.",
     "Password is not correct": "Das Passwort ist falsch",
     "Password is too short (minimum: {count} characters)": "Passwort ist zu kurz (mindestens {count} Zeichen)",
@@ -95,6 +97,7 @@
     "Received status {actual_status} instead of {expected_status}": "Antwortstatus war {actual_status} statt {expected_status}",
     "Redirection after logout.": "Weiterleitung nach Ausloggen.",
     "Reindex actors": "Gespeicherte Zeichnungen neu indexieren",
+    "Report problem": "Problem melden",
     "Reset scene \"{scene_name}\"": "Szene \"{scene_name}\" zurücksetzen",
     "Resetting all scenes failed": "Zurücksetzen der Szenen schlug fehl",
     "Resetting scene \"{scene_name}\"": "Zurücksetzen der Szene \"{scene_name}\" schlug fehl",
@@ -279,7 +282,8 @@
       "Twitter": "Twitter"
     },
     "url-description": {
-      "imprint": "Impressum"
+      "imprint": "Impressum",
+      "online help": "Online-Hilfe"
     }
   }
 }
