Update static content

--- a/functions/translate/localizations/de.json
+++ b/functions/translate/localizations/de.json
@@ -9,6 +9,7 @@
     " Proceeding...": " Setze fort ...",
     " Waiting period is over.": " Wartezeit ist abgelaufen.",
     " Waiting {secondsLeft} seconds before continuing anyways.": " Warte noch {secondsLeft} Sekunden.",
+    "(Enter your username above)": "(Gib oben deinen Benutzernamen ein)",
     "(This is useful to get rid of unwanted images)": "(Das ist nützlich um unerwünschte Bilder wieder zu entfernen)",
     "---Action---": "---Aktion---",
     "---Description---": "---Beschreibung---",
@@ -45,6 +46,7 @@
     "Dynamic config \"{file}\" is not available": "Dynamische Konfigurationsdatei \"{file}\" ist nicht verfügbar",
     "Email": "E-mail",
     "Empty configuration entry at \"{key}\" in \"{section}\"": "Konfiguration von \"{key}\" in \"{section}\" is leer",
+    "Ending with \"{end}\" is not allowed": "\"{end}\" darf nicht am Ende stehen",
     "Enter/leave fullscreen mode": "Vollbild-Modus umschalten",
     "Exception marked as skipped": "Ausnahme ist übersprungen markiert",
     "Expected to find one QR code in image, but found {qr_codes_count}": "Fand {qr_codes_count} statt nur einem QR-Code im Bild",
@@ -64,6 +66,7 @@
     "Forwarding to {url-description}.": "Weiterleitung zu {url-description}.",
     "From": "Von",
     "Go to online help": "Gehe zur Online Hilfe",
+    "Go to {site}": "Weiter zu {site}",
     "Help Page": "Hilfe-Seite",
     "If you run into issues, or your pictures fail to scan please let us know through email to {email}": "Wenn etwas nicht funktioniert oder das Scannen deiner Bilder nicht klappt, schick uns bitte eine Email an {email}",
     "If you run into issues, or your pictures fail to scan please let us know through email to {email} or use this form:": "Wenn etwas nicht funktioniert oder das Scannen deiner Bilder nicht klappt, schick uns bitte eine Email an {email} oder melde es über dieses Formular:",
@@ -78,6 +81,7 @@
     "Loading actor data ...": "Lade Figuren Daten ...",
     "Loading localization data ...": "Lade Übersetzungs-Daten ...",
     "Loading scene data ...": "Lade Szenen Daten ...",
+    "Login": "Anmelden",
     "Message": "Nachricht",
     "Missing configuration entry at \"{key}\" in \"{section}\"": "Konfiguration von \"{key}\" in \"{section}\" fehlt",
     "More about Scanarium": "Mehr zu Scanarium",
@@ -88,6 +92,7 @@
     "No content provided for feedback. Either provide a message, or attach the last failed image.": "Feedback ist leer. Gib entweder eine Nachricht ein oder schicke das letzte fehlgeschlagene Bild mit.",
     "No image selected. Upload aborted.": "Kein Bild ausgewählt. Hochladen abgebrochen",
     "Online Help": "Online-Hilfe",
+    "Only lowercase letters, digits and dashes are allowed": "Nur Kleinbuchstaben, Zahlen und Bindestrich sind erlaubt",
     "Only {supported_formats} files are supported.": "Nur {supported_formats} Dateien werden unterstützt.",
     "Password is not correct": "Das Passwort ist falsch",
     "Password is too short (minimum: {count} characters)": "Passwort ist zu kurz (mindestens {count} Zeichen)",
@@ -123,6 +128,7 @@
     "Show/hide this help page": "Diese Hilfe-Seite ein-/ausblenden",
     "Shutdown initiated": "Scanarium wird herunterfahren",
     "Shutdown initiation failed": "Herunterfahren schlug fehl",
+    "Starting with \"{start}\" is not allowed": "\"{start}\" darf nicht am Anfang stehen",
     "Submit": "Abschicken",
     "Switch scene": "Szenenwechsel",
     "Switching to scene {scene_name}": "Wechsle zur Szene \"{scene_name}\"",
@@ -134,6 +140,8 @@
     "This field may not be empty": "Dieses Feld darf nicht leer sein",
     "To": "An",
     "Toggled frames-per-second counter": "Bildfrequenz-Anzeige umgeschaltet",
+    "Too long (maximum length: {maximum_length})": "Zu lang (Maximal-Länge: {maximum_length})",
+    "Too short (minimal length: {minimal_length})": "Zu kurz (Mindest-Länge: {minimal_length})",
     "Unknown QR code": "Unbekannter QR-Code",
     "Unknown camera type \"{camera_type}\"": "Unbekannter Kameratyp \"{camera_type}\"",
     "Unknown frontend command \"{command}\"": "Unbekanntes Kommando \"{command}\"",
@@ -142,6 +150,7 @@
     "Upload image": "Bild hochladen",
     "Upload of \"{image_name}\" started": "Hochladen von \"{image_name}\" gestartet",
     "User interface": "Benutzeroberfläche",
+    "Username": "Benutzername",
     "Welcome to Scanarium!": "Willkommen bei Scanarium!",
     "Write us an email!": "Schreib uns!",
     "Yearly Archives": "Archiv für einzelne Jahre",
@@ -187,7 +196,12 @@
       "PhotoWoman": "Foto Frau",
       "PhotoWomanAndChild": "Foto Frau und Kind",
       "PlainBalloon": "Einfacher Luftballon",
+      "PlainPassportPhoto35x45mm": "Freies Passfoto 35x45mm",
       "PlainPhoto10x15cm": "Freies Foto 10x15cm",
+      "PlainPhoto10x15cmPortrait": "Freies Foto 10x15cm Hochformat",
+      "PlainPhoto13x19cm": "Freies Foto 13x19cm",
+      "PlainPhoto9x13cm": "Freies Foto 9x13cm",
+      "PlainPhoto9x13cmPortrait": "Freies Foto 9x13cm Hochformat",
       "Planet": "Planet",
       "PlanetWithMoon": "Planet mit Mond",
       "PlanetWithRing": "Planet mit Ring",
