--- a/functions/translate/localizations/en.json
+++ b/functions/translate/localizations/en.json
@@ -32,7 +32,12 @@
       "PhotoWoman": "Photo Woman",
       "PhotoWomanAndChild": "Photo Woman and Child",
       "PlainBalloon": "Plain Balloon",
+      "PlainPassportPhoto35x45mm": "Plain Passport Photo 35x45mm",
       "PlainPhoto10x15cm": "Plain Photo 10x15cm",
+      "PlainPhoto10x15cmPortrait": "Plain Photo 10x15cm Portrait",
+      "PlainPhoto13x19cm": "Plain Photo 13x19cm",
+      "PlainPhoto9x13cm": "Plain Photo 9x13cm",
+      "PlainPhoto9x13cmPortrait": "Plain Photo 9x13cm Portrait",
       "Planet": "Planet",
       "PlanetWithMoon": "Planet with Moon",
       "PlanetWithRing": "Planet with Ring",
