Update static content

--- a/functions/translate/localizations/de.json
+++ b/functions/translate/localizations/de.json
@@ -68,23 +68,35 @@
     "Go to online help": "Gehe zur Online Hilfe",
     "Go to {site}": "Weiter zu {site}",
     "Help Page": "Hilfe-Seite",
+    "I've read the [privacy policy], and I accept it.": "Ich habe die [Datenschutzerklärung] gelesen und akzeptiere sie.",
+    "I've read the [terms of service], and I accept them.": "Ich habe die [Allgemeinen Bedingungen] gelesen und akzeptiere sie.",
+    "If you already have an account, [go to the login page].": "Falls du schon Zugangsdaten hast, geh [direkt zum Einloggen].",
+    "If you do not have an account yet, [get one on the sign up page].": "Falls du noch keine Zugangsdaten hast, [registrier dich einfach].",
+    "If you need an invitation code, [send us an email].": "Falls du einen Einladungs-Code brauchst, [schick uns eine E-mail].",
     "If you run into issues, or your pictures fail to scan please let us know through email to {email}": "Wenn etwas nicht funktioniert oder das Scannen deiner Bilder nicht klappt, schick uns bitte eine Email an {email}",
     "If you run into issues, or your pictures fail to scan please let us know through email to {email} or use this form:": "Wenn etwas nicht funktioniert oder das Scannen deiner Bilder nicht klappt, schick uns bitte eine Email an {email} oder melde es über dieses Formular:",
     "If you run into issues, or your pictures fail to scan please report them using this form:": "Wenn etwas nicht funktioniert oder das Scannen deiner Bilder nicht klappt, melde es bitte über dieses Formular:",
     "Image is too small. Minimum width is {min_width} pixels": "Bild ist zu klein. Mindestbreite ist {min_width} Pixel",
     "Imprint": "Impressum",
+    "Include browser identification": "Browserkennung mitschicken",
     "Include last failed upload": "Letztes fehlgeschlagenes Bild mitschicken",
     "Intentional error from the \"debug:fail\" command": "Absichtlicher Fehler vom Kommando \"debug:fail\"",
     "Invalid value": "Ungültiger Wert",
+    "Invitation code": "Einladungs-Code",
     "Is not a directory \"{file_name}\"": "\"{file_name}\" ist kein Verzeichnis",
     "Language": "Sprache",
+    "Legal": "Rechtliches",
     "Loading actor data ...": "Lade Figuren Daten ...",
     "Loading localization data ...": "Lade Übersetzungs-Daten ...",
     "Loading scene data ...": "Lade Szenen Daten ...",
-    "Login": "Anmelden",
+    "Log in": "Einloggen",
+    "Log in to {service}": "Einloggen zu {service}",
     "Message": "Nachricht",
     "Missing configuration entry at \"{key}\" in \"{section}\"": "Konfiguration von \"{key}\" in \"{section}\" fehlt",
     "More about Scanarium": "Mehr zu Scanarium",
+    "Must not be empty": "Darf nicht leer sein",
+    "Must not contain \"{forbidden}\"": "Darf \"{forbidden}\" nicht enthalten",
+    "Needs to be checked": "Muss angehakt werden",
     "New password": "Neues Passwort",
     "New password and its confirmation do not match": "Das neue Passwort und die Bestätigung unterscheiden sich",
     "Newest Entries": "Neueste Einträge",
@@ -94,8 +106,8 @@
     "Online Help": "Online-Hilfe",
     "Only lowercase letters, digits and dashes are allowed": "Nur Kleinbuchstaben, Zahlen und Bindestrich sind erlaubt",
     "Only {supported_formats} files are supported.": "Nur {supported_formats} Dateien werden unterstützt.",
+    "Password": "Passwort",
     "Password is not correct": "Das Passwort ist falsch",
-    "Password is too short (minimum: {count} characters)": "Passwort ist zu kurz (mindestens {count} Zeichen)",
     "Pause/Resume": "Pause",
     "Paused": "Pause",
     "QR code contains misformed data": "QR-Code enthält ungültige Daten",
@@ -128,6 +140,8 @@
     "Show/hide this help page": "Diese Hilfe-Seite ein-/ausblenden",
     "Shutdown initiated": "Scanarium wird herunterfahren",
     "Shutdown initiation failed": "Herunterfahren schlug fehl",
+    "Sign up": "Registrieren",
+    "Sign up for {service}": "Registrierung zu {service}",
     "Starting with \"{start}\" is not allowed": "\"{start}\" darf nicht am Anfang stehen",
     "Submit": "Abschicken",
     "Switch scene": "Szenenwechsel",
@@ -137,7 +151,6 @@
     "The browser lost the graphics context, which is typically fixed by automatically reloading the page.": "Der Browser hat die Grafik-Umgebung verloren, was mit einem automatischen Neu-laden der Seite behoben werden kann.",
     "The command \"{command}\" did not finish within {timeout} seconds": "Das Kommando \"{command}\" wurde nicht innerhalb von {timeout} Sekunden fertig",
     "The command \"{command}\" did not return 0": "Rückgabewert von \"{command}\" war nicht 0",
-    "This field may not be empty": "Dieses Feld darf nicht leer sein",
     "To": "An",
     "Toggled frames-per-second counter": "Bildfrequenz-Anzeige umgeschaltet",
     "Too long (maximum length: {maximum_length})": "Zu lang (Maximal-Länge: {maximum_length})",
@@ -154,6 +167,7 @@
     "Welcome to Scanarium!": "Willkommen bei Scanarium!",
     "Write us an email!": "Schreib uns!",
     "Yearly Archives": "Archiv für einzelne Jahre",
+    "coloring page": "Ausmalbild",
     "fps: {fps}": "Bilder/s: {fps}",
     "more": "mehr",
     "undefined error": "Unbekannter Fehler",
@@ -163,8 +177,10 @@
     "{command_name} command failed": "Kommando {command_name} schlug fehl",
     "{command_name} command ok": "Kommando {command_name} ok",
     "{method_name} failed": "Fehler beim {method_name}",
+    "{method_name} failed; name prohibited or already taken": "Fehler beim {method_name}; Name blockiert oder bereits vergeben",
     "{method_name} ok": "{method_name} ok",
     "{method_name} started": "{method_name} gestartet",
+    "{method_name} took too long and got aborted": "{method_name} dauerte zu lange und wurde abgebrochen",
     "{month} {day}, {year}": "{day}. {month} {year}",
     "{parameter_name} ({parameter_variant_name})": "{parameter_name} mit {parameter_variant_name}",
     "↓↓↓ Insert coloring pages below ↓↓↓": "↓↓↓ Ausgemalte Bilder hier unten ins Fach einlegen ↓↓↓"
@@ -211,6 +227,7 @@
       "SimpleRocket": "Einfache Rakete",
       "SportsCar": "Sportwagen",
       "Star": "Stern",
+      "SubcompactCar": "Kleinwagen",
       "TailedButterfly": "Geschweifter Schmetterling",
       "Tit": "Meise",
       "Tractor": "Traktor",
@@ -239,7 +256,9 @@
       "eo": "Esperanto"
     },
     "method_name": {
+      "login": "Einloggen",
       "logout": "Ausloggen",
+      "previous action": "Ausführen der letzten Aktion",
       "regenerate-static-content": "Neu-Erzeugung der statischen Inhalte",
       "reindex": "Reindexierung",
       "report-feedback": "Feedback-Einsendung",
@@ -247,6 +266,7 @@
       "scan": "Einlesen",
       "scan-data": "Hochladen",
       "show-source": "Kamera-Anzeige",
+      "signup": "Registrieren",
       "update-password": "Änderung des Passworts"
     },
     "month": {
@@ -292,13 +312,17 @@
     "site": {
       "Blog": "Blog",
       "Facebook": "Facebook",
+      "Handbook": "Handbuch",
       "Homepage": "Homepage",
       "Instagram": "Instagram",
       "Twitter": "Twitter"
     },
     "url-description": {
       "imprint": "Impressum",
-      "online help": "Online-Hilfe"
+      "license": "Lizenz",
+      "online help": "Online-Hilfe",
+      "privacy policy": "Datenschutzerklärung",
+      "terms of service": "Nutzungsbedingungen"
     }
   }
 }
