--- a/functions/translate/localizations/en.json
+++ b/functions/translate/localizations/en.json
@@ -47,6 +47,7 @@
       "SimpleRocket": "Simple Rocket",
       "SportsCar": "Sports Car",
       "Star": "Star",
+      "SubcompactCar": "Subcompact Car",
       "TailedButterfly": "Tailed Butterfly",
       "Tractor": "Tractor",
       "Truck": "Truck",
