Update static content

--- a/functions/translate/localizations/de.json
+++ b/functions/translate/localizations/de.json
@@ -104,6 +104,7 @@
     "No content provided for feedback. Either provide a message, or attach the last failed image.": "Feedback ist leer. Gib entweder eine Nachricht ein oder schicke das letzte fehlgeschlagene Bild mit.",
     "No image selected. Upload aborted.": "Kein Bild ausgewählt. Hochladen abgebrochen",
     "Online Help": "Online-Hilfe",
+    "Only letters, digits and {additional} are allowed": "Nur Buchstaben, Ziffern und {additional} sind erlaubt",
     "Only lowercase letters, digits and dashes are allowed": "Nur Kleinbuchstaben, Zahlen und Bindestrich sind erlaubt",
     "Only {supported_formats} files are supported.": "Nur {supported_formats} Dateien werden unterstützt.",
     "Password": "Passwort",
@@ -111,11 +112,13 @@
     "Pause/Resume": "Pause",
     "Paused": "Pause",
     "QR code contains misformed data": "QR-Code enthält ungültige Daten",
+    "Really reset all scenes, delete all scanned actors, and start afresh? (This cannot be undone)": "Wirklich alle Scenen zurücksetzen, alle eingescannten Figuren löschen und neu starten? (Dies kann nicht rückgängig gemacht werden)",
     "Really reset the scene \"{scene_name}\", delete this scenes' scanned actors, and start afresh? (This cannot be undone)": "Die Szene \"{scene_name}\" wirklich zurücksetzen, eingescannte Figuren löschen und neu starten? (Dies kann nicht rückgängig gemacht werden)",
     "Received status {actual_status} instead of {expected_status}": "Antwortstatus war {actual_status} statt {expected_status}",
     "Redirection after logout.": "Weiterleitung nach Ausloggen.",
     "Reindex actors": "Gespeicherte Zeichnungen neu indexieren",
     "Report problem": "Problem melden",
+    "Reset all scenes": "Alle Szenen zurücksetzen",
     "Reset scene \"{scene_name}\"": "Szene \"{scene_name}\" zurücksetzen",
     "Resetting all scenes failed": "Zurücksetzen der Szenen schlug fehl",
     "Resetting scene \"{scene_name}\"": "Zurücksetzen der Szene \"{scene_name}\" schlug fehl",
@@ -164,6 +167,7 @@
     "Upload of \"{image_name}\" started": "Hochladen von \"{image_name}\" gestartet",
     "User interface": "Benutzeroberfläche",
     "Username": "Benutzername",
+    "Version: {version}": "Version: {version}",
     "Welcome to Scanarium!": "Willkommen bei Scanarium!",
     "Write us an email!": "Schreib uns!",
     "Yearly Archives": "Archiv für einzelne Jahre",
