Update static content

--- a/functions/translate/localizations/de.json
+++ b/functions/translate/localizations/de.json
@@ -40,6 +40,8 @@
     "Dear Scanarium Team,\\n\\nThe attached picture failed to scan, but I cannot see why. Could you please have a look?\\n\\nThanks and best regards": "Liebes Scanarium Team,\\n\\nDas mitgeschickte Bild lässt sich nicht scannen. Aber warum nicht?\\n\\nBesten Dank und liebe Grüße",
     "Delete actors": "Figuren löschen",
     "Delete all your scanned actors": "Alle gespeicherten Zeichnungen löschen",
+    "Developer Mode": "Entwicklermodus",
+    "Developer Mode activated": "Entwicklermodus aktiviert",
     "Directory to store file in does not exist, or is no directory": "Verzeichnis zum Speichern existiert nicht, oder ist kein Verzeichnis",
     "Downloading coloring page \"{actor_name}\" might close this page.": "Das Herunterladen des Ausmalbilds \"{actor_name}\" kann unter Umständen diese Seite schließen.",
     "Dynamic config \"{file}\" cannot be read": "Dynamische Konfigurationsdatei \"{file}\" kann nicht gelesen werden",
@@ -138,6 +140,8 @@
     "Server-side image processing took too long": "Bildverarbeitung am Server dauerte zu lange",
     "Settings": "Einstellungen",
     "Show camera source image": "Zeige Kamerabild",
+    "Show developer information": "Entwicklerinformationen anzeigen",
+    "Show frame counter": "Bildfrequenz (frames-per-second) anzeigen",
     "Show/hide developer information": "Entwicklerinformationen ein-/ausblenden",
     "Show/hide frame counter": "Bildfrequenz (frames-per-second) ein-/ausblenden",
     "Show/hide this help page": "Diese Hilfe-Seite ein-/ausblenden",
@@ -171,6 +175,7 @@
     "Welcome to Scanarium!": "Willkommen bei Scanarium!",
     "Write us an email!": "Schreib uns!",
     "Yearly Archives": "Archiv für einzelne Jahre",
+    "You are already in developer mode": "Du bist bereits im Entwicklermodus",
     "coloring page": "Ausmalbild",
     "fps: {fps}": "Bilder/s: {fps}",
     "more": "mehr",
@@ -193,6 +198,9 @@
     "actor_name": {
       "Ambulance": "Rettungsauto",
       "Astronaut": "Astronaut",
+      "BigSnowSaucer": "Großes Schnee UFO",
+      "BoltRocket": "Flitz-Rakete",
+      "BroadBug": "Breitwanze",
       "BunnyBalloon": "Hasen-Luftballon",
       "Bus": "Autobus",
       "CompactMpv": "Kompakt Van",
@@ -202,14 +210,21 @@
       "FlyingSaucer": "Fliegende Untertasse",
       "HeartBalloon": "Herz-Luftballon",
       "InstantPhoto": "Sofortbild",
+      "LongBug": "Langkäfer",
       "MonsterTruck": "Monster-Truck",
       "OldFamilyCar": "Altes Familienauto",
       "Parrot": "Papagei",
+      "PhotoBirthdayCake": "Foto Geburtstagstorte",
       "PhotoCastleRuin": "Foto Burgruine",
       "PhotoChild": "Foto Kind",
+      "PhotoChildPresenting": "Foto Kind beim Herzeigen",
+      "PhotoChildWithSchoolCone": "Foto Kind mit Schultüte",
+      "PhotoChristmasTree": "Foto Weihnachtsbaum",
       "PhotoFace": "Foto Gesicht",
+      "PhotoGhostCostume": "Foto Geist-Verkleidung",
       "PhotoMan": "Foto Mann",
       "PhotoManAndChild": "Foto Mann und Kind",
+      "PhotoPumpkin": "Foto Kürbis",
       "PhotoRacingCar": "Foto Rennauto",
       "PhotoTwoChildren": "Foto zwei Kinder",
       "PhotoUnicorn": "Foto Einhorn",
@@ -227,10 +242,18 @@
       "PlanetWithRing": "Planet mit Ring",
       "PoliceCar": "Polizeiauto",
       "QuadBike": "Quad",
+      "RoundBug": "Rundkäfer",
+      "SemiTrailerBox": "Kofferauflieger",
+      "SemiTrailerTank": "Tankauflieger",
+      "SemiTruckCabOver": "Zugmaschine Frontlenker",
+      "SemiTruckConventionalCab": "Zugmaschine Haubenlenker",
       "SimpleButterfly": "Schlichter Schmetterling",
       "SimpleRocket": "Einfache Rakete",
+      "SkiingChildTuck": "Skifahrendes Kind Hocke",
+      "SkiingChildUpright": "Skifahrendes Kind aufrecht",
       "SportsCar": "Sportwagen",
       "Star": "Stern",
+      "SteerableBob": "Lenkbob",
       "SubcompactCar": "Kleinwagen",
       "TailedButterfly": "Geschweifter Schmetterling",
       "Tit": "Meise",
@@ -311,6 +334,7 @@
       "fairies": "Feenwelt",
       "highway": "Landstraße",
       "photos": "Fotos",
+      "piste": "Skipiste",
       "space": "Weltall"
     },
     "site": {
