--- a/functions/translate/localizations/en.json
+++ b/functions/translate/localizations/en.json
@@ -10,6 +10,9 @@
     "actor_name": {
       "Ambulance": "Ambulance",
       "Astronaut": "Astronaut",
+      "BigSnowSaucer": "Big Snow Saucer",
+      "BoltRocket": "Bolt Rocket",
+      "BroadBug": "Broad Bug",
       "BunnyBalloon": "Bunny Balloon",
       "Bus": "Bus",
       "CompactMpv": "Compact MPV",
@@ -19,13 +22,20 @@
       "FlyingSaucer": "Flying Saucer",
       "HeartBalloon": "Heart Balloon",
       "InstantPhoto": "Instant Photo",
+      "LongBug": "Long Bug",
       "MonsterTruck": "Monster Truck",
       "OldFamilyCar": "Old Family Car",
+      "PhotoBirthdayCake": "Photo Birthday Cake",
       "PhotoCastleRuin": "Photo Castle Ruin",
       "PhotoChild": "Photo Child",
+      "PhotoChildPresenting": "Photo Child Presenting",
+      "PhotoChildWithSchoolCone": "Photo Child with school cone",
+      "PhotoChristmasTree": "Photo Christmas Tree",
       "PhotoFace": "Photo Face",
+      "PhotoGhostCostume": "Photo Ghost Costume",
       "PhotoMan": "Photo Man",
       "PhotoManAndChild": "Photo Man and Child",
+      "PhotoPumpkin": "Photo Pumpkin",
       "PhotoRacingCar": "Photo Racing Car",
       "PhotoTwoChildren": "Photo two Children",
       "PhotoUnicorn": "Photo Unicorn",
@@ -43,10 +53,18 @@
       "PlanetWithRing": "Planet with Ring",
       "PoliceCar": "Police Car",
       "QuadBike": "Quad Bike",
+      "RoundBug": "Round Bug",
+      "SemiTrailerBox": "Semi-Trailer Box",
+      "SemiTrailerTank": "Semi-Trailer Tank",
+      "SemiTruckCabOver": "Semi-Truck Cab-Over",
+      "SemiTruckConventionalCab": "Semi-Truck Conventional Cab",
       "SimpleButterfly": "Simple Butterfly",
       "SimpleRocket": "Simple Rocket",
+      "SkiingChildTuck": "Skiing Child Tuck",
+      "SkiingChildUpright": "Skiing Child Upright",
       "SportsCar": "Sports Car",
       "Star": "Star",
+      "SteerableBob": "Steerable Bob",
       "SubcompactCar": "Subcompact Car",
       "TailedButterfly": "Tailed Butterfly",
       "Tractor": "Tractor",
@@ -115,6 +133,7 @@
       "fairies": "Fairies",
       "highway": "Highway",
       "photos": "Photos",
+      "piste": "Piste",
       "space": "Space"
     }
   }
